k8s/06-payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: incident-platform
  labels:
    app: payment-service
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 8002
      name: http
  selector:
    app: payment-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: incident-platform
  labels:
    app: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: platform-payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
